--- a/css/style.css
+++ b/css/style.css
@@ -321,6 +321,7 @@ html{
                     border-radius: 5px;
                     padding: 5px 3px;
                     font-style: verdana;
+                    margin: 5px;
                 }
             }
 
